# serializer version: 1
# name: test_aggregate_function_call_ok[agg_fcall_distinct]
  '''
  SELECT FUNC(DISTINCT col1)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          function_call_expr
            function_name
              ident	FUNC
              function_distinct
            function_args
              pos_arg
                ident	col1
  '''
# ---
# name: test_aggregate_function_call_ok[agg_fcall_having_max]
  '''
  SELECT FUNC(col1 HAVING MAX col2)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          function_call_expr
            function_name
              ident	FUNC
            function_args
              pos_arg
                ident	col1
            having_modifier
              having_max
              ident	col2
  '''
# ---
# name: test_aggregate_function_call_ok[agg_fcall_having_min]
  '''
  SELECT FUNC(col1 HAVING MIN col2)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          function_call_expr
            function_name
              ident	FUNC
            function_args
              pos_arg
                ident	col1
            having_modifier
              having_min
              ident	col2
  '''
# ---
# name: test_aggregate_function_call_ok[agg_fcall_ignore_nulls]
  '''
  SELECT FUNC(col1 IGNORE NULLS)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          function_call_expr
            function_name
              ident	FUNC
            function_args
              pos_arg
                ident	col1
            nulls_modifier
              ignore_nulls
  '''
# ---
# name: test_aggregate_function_call_ok[agg_fcall_limit]
  '''
  SELECT FUNC(col1 LIMIT 1)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          function_call_expr
            function_name
              ident	FUNC
            function_args
              pos_arg
                ident	col1
            limit_modifier
              integer_literal	1
  '''
# ---
# name: test_aggregate_function_call_ok[agg_fcall_order_by]
  '''
  SELECT FUNC(col1 ORDER BY col2 DESC)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          function_call_expr
            function_name
              ident	FUNC
            function_args
              pos_arg
                ident	col1
            order_by_modifier
              order_by_items
                order_by_item
                  ident	col2
                  order_by_item_sort	DESC
  '''
# ---
# name: test_aggregate_function_call_ok[agg_fcall_respect_nulls]
  '''
  SELECT FUNC(col1 RESPECT NULLS)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          function_call_expr
            function_name
              ident	FUNC
            function_args
              pos_arg
                ident	col1
            nulls_modifier
              respect_nulls
  '''
# ---
# name: test_and_or_not_ok[expr_and_or_not]
  '''
  SELECT x OR y AND NOT z
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          or_expr
            ident	x
            and_expr
              ident	y
              not_expr
                ident	z
  '''
# ---
# name: test_and_or_not_ok[expr_and_or_not_parens]
  '''
  SELECT (x OR y) AND NOT z
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          and_expr
            parenthesized_expr
              or_expr
                ident	x
                ident	y
            not_expr
              ident	z
  '''
# ---
# name: test_between_ok[expr_between]
  '''
  SELECT x BETWEEN a AND b AND c
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          and_expr
            between_expr
              ident	x
              ident	a
              ident	b
            ident	c
  '''
# ---
# name: test_case_ok[case_match_multi]
  '''
  SELECT CASE col1 WHEN 1 THEN 1 WHEN 2 THEN 2 END
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          case_match_expr
            ident	col1
            when_then_expr
              integer_literal	1
              integer_literal	1
            when_then_expr
              integer_literal	2
              integer_literal	2
  '''
# ---
# name: test_case_ok[case_match_multi_else]
  '''
  SELECT CASE col1 WHEN 1 THEN 1 WHEN 2 THEN 2 ELSE 3 END
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          case_match_expr
            ident	col1
            when_then_expr
              integer_literal	1
              integer_literal	1
            when_then_expr
              integer_literal	2
              integer_literal	2
            else_expr
              integer_literal	3
  '''
# ---
# name: test_case_ok[case_match_single]
  '''
  SELECT CASE col1 WHEN 1 THEN 1 END
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          case_match_expr
            ident	col1
            when_then_expr
              integer_literal	1
              integer_literal	1
  '''
# ---
# name: test_case_ok[case_multi]
  '''
  SELECT CASE WHEN 1 THEN 1 WHEN 2 THEN 2 END
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          case_expr
            when_then_expr
              integer_literal	1
              integer_literal	1
            when_then_expr
              integer_literal	2
              integer_literal	2
  '''
# ---
# name: test_case_ok[case_multi_else]
  '''
  SELECT CASE WHEN 1 THEN 1 WHEN 2 THEN 2 ELSE 3 END
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          case_expr
            when_then_expr
              integer_literal	1
              integer_literal	1
            when_then_expr
              integer_literal	2
              integer_literal	2
            else_expr
              integer_literal	3
  '''
# ---
# name: test_case_ok[case_single]
  '''
  SELECT CASE WHEN 1 THEN 1 END
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          case_expr
            when_then_expr
              integer_literal	1
              integer_literal	1
  '''
# ---
# name: test_cast_ok[cast]
  '''
  SELECT CAST('1' AS INT64)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          cast_expr_kind_cast
            cast_expr_target
              string_literal	'1'
              ident	INT64
  '''
# ---
# name: test_cast_ok[cast_format]
  '''
  SELECT CAST(b'\x48\x65\x6c\x6c\x6f' AS STRING FORMAT 'ASCII')
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          cast_expr_kind_cast
            cast_expr_target
              bytes_literal	b'\x48\x65\x6c\x6c\x6f'
              ident	STRING
            cast_expr_format
              string_literal	'ASCII'
  '''
# ---
# name: test_cast_ok[cast_safe]
  '''
  SELECT SAFE_CAST('1' AS INT64)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          cast_expr_kind_safe_cast
            cast_expr_target
              string_literal	'1'
              ident	INT64
  '''
# ---
# name: test_column_expr_ok[expr_add]
  '''
  SELECT x + y
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          add_expr
            ident	x
            ident	y
  '''
# ---
# name: test_column_expr_ok[expr_and]
  '''
  SELECT x AND y
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          and_expr
            ident	x
            ident	y
  '''
# ---
# name: test_column_expr_ok[expr_between]
  '''
  SELECT x BETWEEN y AND z
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          between_expr
            ident	x
            ident	y
            ident	z
  '''
# ---
# name: test_column_expr_ok[expr_bitwise_and]
  '''
  SELECT x & y
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          bitwise_and_expr
            ident	x
            ident	y
  '''
# ---
# name: test_column_expr_ok[expr_bitwise_not]
  '''
  SELECT ~x
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          bitwise_not_expr
            ident	x
  '''
# ---
# name: test_column_expr_ok[expr_bitwise_or]
  '''
  SELECT x | y
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          bitwise_or_expr
            ident	x
            ident	y
  '''
# ---
# name: test_column_expr_ok[expr_bitwise_shr]
  '''
  SELECT x >> y
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          bitwise_shr_expr
            ident	x
            ident	y
  '''
# ---
# name: test_column_expr_ok[expr_bitwise_xor]
  '''
  SELECT x ^ y
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          bitwise_xor_expr
            ident	x
            ident	y
  '''
# ---
# name: test_column_expr_ok[expr_div]
  '''
  SELECT x / y
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          div_expr
            ident	x
            ident	y
  '''
# ---
# name: test_column_expr_ok[expr_eq]
  '''
  SELECT x = y
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          eq_expr
            ident	x
            ident	y
  '''
# ---
# name: test_column_expr_ok[expr_field_access]
  '''
  SELECT x.y
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          path_expression
            ident	x
            ident	y
  '''
# ---
# name: test_column_expr_ok[expr_gt]
  '''
  SELECT x > y
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          gt_expr
            ident	x
            ident	y
  '''
# ---
# name: test_column_expr_ok[expr_gte]
  '''
  SELECT x >= y
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          gte_expr
            ident	x
            ident	y
  '''
# ---
# name: test_column_expr_ok[expr_in]
  '''
  SELECT x IN (1,2,3)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          in_expr
            ident	x
            parenthesized_list
              integer_literal	1
              integer_literal	2
              integer_literal	3
  '''
# ---
# name: test_column_expr_ok[expr_is]
  '''
  SELECT x IS TRUE
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          is_expr
            ident	x
            boolean_literal	TRUE
  '''
# ---
# name: test_column_expr_ok[expr_is_distinct_from]
  '''
  SELECT x IS DISTINCT FROM y
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          distinct_expr
            ident	x
            ident	y
  '''
# ---
# name: test_column_expr_ok[expr_is_not]
  '''
  SELECT x IS NOT NULL
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          is_expr
            ident	x
            not_modifier
            null_literal	NULL
  '''
# ---
# name: test_column_expr_ok[expr_like]
  '''
  SELECT x LIKE 'a%'
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          like_expr
            ident	x
            string_literal	'a%'
  '''
# ---
# name: test_column_expr_ok[expr_lt]
  '''
  SELECT x < y
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          lt_expr
            ident	x
            ident	y
  '''
# ---
# name: test_column_expr_ok[expr_lte]
  '''
  SELECT x <= y
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          lte_expr
            ident	x
            ident	y
  '''
# ---
# name: test_column_expr_ok[expr_mul]
  '''
  SELECT x * y
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          mul_expr
            ident	x
            ident	y
  '''
# ---
# name: test_column_expr_ok[expr_ne]
  '''
  SELECT x != y
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ne_expr
            ident	x
            ident	y
  '''
# ---
# name: test_column_expr_ok[expr_ne_var]
  '''
  SELECT x <> y
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ne_expr
            ident	x
            ident	y
  '''
# ---
# name: test_column_expr_ok[expr_not]
  '''
  SELECT NOT x
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          not_expr
            ident	x
  '''
# ---
# name: test_column_expr_ok[expr_not_between]
  '''
  SELECT x NOT BETWEEN y AND z
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          between_expr
            ident	x
            not_modifier
            ident	y
            ident	z
  '''
# ---
# name: test_column_expr_ok[expr_not_in]
  '''
  SELECT x NOT IN UNNEST([1,2,3])
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          in_expr
            ident	x
            not_modifier
            unnest_expr
              array_literal
                array_literal_prefix
                array_literal_item_list
                  integer_literal	1
                  integer_literal	2
                  integer_literal	3
  '''
# ---
# name: test_column_expr_ok[expr_not_like]
  '''
  SELECT x NOT LIKE 'a%'
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          like_expr
            ident	x
            not_modifier
            string_literal	'a%'
  '''
# ---
# name: test_column_expr_ok[expr_not_qlike]
  '''
  SELECT x NOT LIKE ALL ('a%','%b')
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          qlike_expr
            ident	x
            not_modifier
            qlike_quantifier	ALL
            parenthesized_list
              string_literal	'a%'
              string_literal	'%b'
  '''
# ---
# name: test_column_expr_ok[expr_or]
  '''
  SELECT x OR y
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          or_expr
            ident	x
            ident	y
  '''
# ---
# name: test_column_expr_ok[expr_parens]
  '''
  SELECT (x OR y) OR z
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          or_expr
            parenthesized_expr
              or_expr
                ident	x
                ident	y
            ident	z
  '''
# ---
# name: test_column_expr_ok[expr_qlike]
  '''
  SELECT x LIKE ANY UNNEST(['a%','%b'])
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          qlike_expr
            ident	x
            qlike_quantifier	ANY
            unnest_expr
              array_literal
                array_literal_prefix
                array_literal_item_list
                  string_literal	'a%'
                  string_literal	'%b'
  '''
# ---
# name: test_column_expr_ok[expr_sub]
  '''
  SELECT x - y
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          sub_expr
            ident	x
            ident	y
  '''
# ---
# name: test_column_expr_ok[expr_subscript]
  '''
  SELECT x[0]
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          subscript_expr
            ident	x
            integer_literal	0
  '''
# ---
# name: test_column_expr_ok[expr_uminus]
  '''
  SELECT -x
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          uminus_expr
            ident	x
  '''
# ---
# name: test_column_expr_ok[expr_uplus]
  '''
  SELECT +x
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          uplus_expr
            ident	x
  '''
# ---
# name: test_dotted_expr_ok[dotted_column_expr_multi]
  '''
  SELECT column1.column2.column3
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          path_expression
            ident	column1
            ident	column2
            ident	column3
  '''
# ---
# name: test_dotted_expr_ok[dotted_column_expr_single]
  '''
  SELECT column1.column2
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          path_expression
            ident	column1
            ident	column2
  '''
# ---
# name: test_dotted_expr_ok[dotted_table_expr_multi]
  '''
  SELECT column1 FROM `project1`.dataset1.table1
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	`project1`
            ident	dataset1
            ident	table1
  '''
# ---
# name: test_dotted_expr_ok[dotted_table_expr_single]
  '''
  SELECT column1 FROM dataset1.table1
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	dataset1
            ident	table1
  '''
# ---
# name: test_function_call_ok[fcall_kitchen_sink]
  '''
  SELECT FUNC(1, name2 => 2)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          function_call_expr
            function_name
              ident	FUNC
            function_args
              pos_arg
                integer_literal	1
              named_arg
                ident	name2
                integer_literal	2
  '''
# ---
# name: test_function_call_ok[fcall_named_arg_multi]
  '''
  SELECT FUNC(name1 => 1, name2 => 2)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          function_call_expr
            function_name
              ident	FUNC
            function_args
              named_arg
                ident	name1
                integer_literal	1
              named_arg
                ident	name2
                integer_literal	2
  '''
# ---
# name: test_function_call_ok[fcall_named_arg_single]
  '''
  SELECT FUNC(name1 => 1)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          function_call_expr
            function_name
              ident	FUNC
            function_args
              named_arg
                ident	name1
                integer_literal	1
  '''
# ---
# name: test_function_call_ok[fcall_path_expr]
  '''
  SELECT NET.IPV4_FROM_INT64(42)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          function_call_expr
            function_name
              path_expression
                ident	NET
                ident	IPV4_FROM_INT64
            function_args
              pos_arg
                integer_literal	42
  '''
# ---
# name: test_function_call_ok[fcall_pos_arg_multi]
  '''
  SELECT FUNC(1, 2)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          function_call_expr
            function_name
              ident	FUNC
            function_args
              pos_arg
                integer_literal	1
              pos_arg
                integer_literal	2
  '''
# ---
# name: test_function_call_ok[fcall_pos_arg_none]
  '''
  SELECT FUNC()
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          function_call_expr
            function_name
              ident	FUNC
  '''
# ---
# name: test_function_call_ok[fcall_pos_arg_single]
  '''
  SELECT FUNC(1)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          function_call_expr
            function_name
              ident	FUNC
            function_args
              pos_arg
                integer_literal	1
  '''
# ---
# name: test_function_call_ok[fcall_star_expr]
  '''
  SELECT FUNC(*)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          function_call_expr
            function_name
              ident	FUNC
            function_args
              star_arg
  '''
# ---
# name: test_keyword_subquery_ok[keyword_subquery_array]
  '''
  SELECT ARRAY(SELECT 1)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          array_subquery_expr
            subquery
              query_expr
                select
                  select_metadata
                  select_list
                    select_expr
                      integer_literal	1
  '''
# ---
# name: test_keyword_subquery_ok[keyword_subquery_exists]
  '''
  SELECT EXISTS(SELECT 1)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          exists_subquery_expr
            subquery
              query_expr
                select
                  select_metadata
                  select_list
                    select_expr
                      integer_literal	1
  '''
# ---
# name: test_subquery_expr_ok[from_subquery_alias]
  '''
  FROM (SELECT 1) AS a
  
  query_expr
    pipe_from
      from_clause
        from_item_subquery
          subquery
            query_expr
              select
                select_metadata
                select_list
                  select_expr
                    integer_literal	1
          as_alias
            ident	a
  '''
# ---
# name: test_subquery_expr_ok[parenthesized_in_subquery]
  '''
  SELECT 1 - (SELECT (1 << 8) + 1 AS a)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          sub_expr
            integer_literal	1
            subquery
              query_expr
                select
                  select_metadata
                  select_list
                    select_expr
                      add_expr
                        parenthesized_expr
                          bitwise_shl_expr
                            integer_literal	1
                            integer_literal	8
                        integer_literal	1
                      as_alias
                        ident	a
  '''
# ---
# name: test_subquery_expr_ok[subquery_in_parenthesized]
  '''
  SELECT ((SELECT 1) + (SELECT 1)) - 1
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          sub_expr
            parenthesized_expr
              add_expr
                subquery
                  query_expr
                    select
                      select_metadata
                      select_list
                        select_expr
                          integer_literal	1
                subquery
                  query_expr
                    select
                      select_metadata
                      select_list
                        select_expr
                          integer_literal	1
            integer_literal	1
  '''
# ---
# name: test_subquery_expr_ok[subquery_sum]
  '''
  SELECT (SELECT 1) + (SELECT 1)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          add_expr
            subquery
              query_expr
                select
                  select_metadata
                  select_list
                    select_expr
                      integer_literal	1
            subquery
              query_expr
                select
                  select_metadata
                  select_list
                    select_expr
                      integer_literal	1
  '''
# ---
# name: test_subquery_expr_ok[subquery_sum_nested_alias]
  '''
  SELECT (SELECT (SELECT 1) + (SELECT 1)) AS a
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          subquery
            query_expr
              select
                select_metadata
                select_list
                  select_expr
                    add_expr
                      subquery
                        query_expr
                          select
                            select_metadata
                            select_list
                              select_expr
                                integer_literal	1
                      subquery
                        query_expr
                          select
                            select_metadata
                            select_list
                              select_expr
                                integer_literal	1
          as_alias
            ident	a
  '''
# ---
# name: test_subquery_expr_ok[top_level_subquery_alias]
  '''
  (SELECT 1) AS a
  
  query_expr
    aliased_subquery
      subquery
        query_expr
          select
            select_metadata
            select_list
              select_expr
                integer_literal	1
      as_alias_as_required
        ident	a
  '''
# ---
# name: test_subquery_expr_ok[trailing_subquery_alias]
  '''
  SELECT (SELECT 1) AS a
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          subquery
            query_expr
              select
                select_metadata
                select_list
                  select_expr
                    integer_literal	1
          as_alias
            ident	a
  '''
# ---
# name: test_subscript_expr_ok[subscript_expr_integer_literal_multi]
  '''
  SELECT column1[0][1]
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          subscript_expr
            subscript_expr
              ident	column1
              integer_literal	0
            integer_literal	1
  '''
# ---
# name: test_subscript_expr_ok[subscript_expr_integer_literal_single]
  '''
  SELECT column1[0]
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          subscript_expr
            ident	column1
            integer_literal	0
  '''
# ---
# name: test_subscript_expr_ok[subscript_expr_kitchen_sink]
  '''
  SELECT column1[0].column2[OFFSET(0)].column3['key1']
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          subscript_expr
            dot_ident
              subscript_expr
                dot_ident
                  subscript_expr
                    ident	column1
                    integer_literal	0
                  ident	column2
                function_call_expr
                  function_name
                    ident	OFFSET
                  function_args
                    pos_arg
                      integer_literal	0
              ident	column3
            string_literal	'key1'
  '''
# ---
# name: test_subscript_expr_ok[subscript_expr_offset]
  '''
  SELECT column1[OFFSET(2)]
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          subscript_expr
            ident	column1
            function_call_expr
              function_name
                ident	OFFSET
              function_args
                pos_arg
                  integer_literal	2
  '''
# ---
# name: test_subscript_expr_ok[subscript_expr_path_expr_nested]
  '''
  SELECT column1.column2[0][1]
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          subscript_expr
            subscript_expr
              path_expression
                ident	column1
                ident	column2
              integer_literal	0
            integer_literal	1
  '''
# ---
# name: test_subscript_expr_ok[subscript_expr_string_literal]
  '''
  SELECT column1['key1']
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          subscript_expr
            ident	column1
            string_literal	'key1'
  '''
# ---
